--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <head></head>
   <body>
     <h1>Below is an example of an svg file using img-tag</h1>
-    <img src="https://cdn-assets-eu.frontify.com/s3/frontify-enterprise-files-eu/eyJwYXRoIjoiZGVtb1wvYWNjb3VudHNcLzBmXC83MDAwMDQ3XC9wcm9qZWN0c1wvMzgyMVwvYXNzZXRzXC9iMFwvNzMzMzNcL2ZmYTQ2ODAxN2RmMzVmNjIwMjYxNjZhYTMyNGNhZWM0LTE1NTE5NjMzNzguc3ZnIn0:demo:q5W4PhUCEzjhhNsCBiwrtzJui2Nr1oJj1Hb2t5BGRh4?width={width}"/>
+    <img src="https://cdn-assets-eu.frontify.com/s3/frontify-enterprise-files-eu/eyJwYXRoIjoiZGVtb1wvYWNjb3VudHNcLzBmXC83MDAwMDQ3XC9wcm9qZWN0c1wvMzgyMVwvYXNzZXRzXC9iMFwvNzMzMzNcL2ZmYTQ2ODAxN2RmMzVmNjIwMjYxNjZhYTMyNGNhZWM0LTE1NTE5NjMzNzguc3ZnIn0:demo:q5W4PhUCEzjhhNsCBiwrtzJui2Nr1oJj1Hb2t5BGRh4?width=200"/>
   </body>
 </html>
